--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "vite-plugin-eslint": "^1.3.0"
   },
   "dependencies": {
+    "@barba/core": "^2.10.3",
     "datatables.net-dt": "^2.1.3",
     "gsap": "^3.12.5",
+    "lenis": "^1.1.13",
+    "mouse-follower": "^1.1.2",
     "split-type": "^0.3.4"
   }
 }
